--- a/references.bib
+++ b/references.bib
@@ -1,9 +1,244 @@
-@article{lees2010theoretical,
-  title={Theoretical maximum capacity as benchmark for empty vehicle redistribution in personal rapid transit},
-  author={Lees-Miller, John and Hammersley, John and Wilson, R},
-  journal={Transportation Research Record: Journal of the Transportation Research Board},
-  number={2146},
-  pages={76--83},
-  year={2010},
-  publisher={Transportation Research Board of the National Academies}
+@phdthesis{Bontron2004,
+	author = {Bontron, Guillaume},
+	pages = {262 p.},
+	school = {Institut National Polytechnique de Grenoble},
+	title = {{Pr{\'{e}}vision quantitative des pr{\'{e}}cipitations: Adaptation probabiliste par recherche d'analogues. Utilisation des R{\'{e}}analyses NCEP/NCAR et application aux pr{\'{e}}cipitations du Sud-Est de la France.}},
+	year = {2004}
+}
+@article{Horton2018a,
+	author = {Horton, Pascal and Jaboyedoff, Michel and Obled, Charles},
+	doi = {10.1016/j.jhydrol.2017.04.017},
+	issn = {00221694},
+	journal = {J. Hydrol.},
+	pages = {1220--1231},
+	publisher = {Elsevier B.V.},
+	title = {{Using genetic algorithms to optimize the analogue method for precipitation prediction in the Swiss Alps}},
+	volume = {556},
+	year = {2018}
+}
+@article{BenDaoud2016,
+	author = {{Ben Daoud}, Aur{\'{e}}lien and Sauquet, Eric and Bontron, Guillaume and Obled, Charles and Lang, Michel},
+	doi = {10.1016/j.atmosres.2015.09.015},
+	issn = {01698095},
+	journal = {Atmos. Res.},
+	pages = {147--159},
+	publisher = {Elsevier B.V.},
+	title = {{Daily quantitative precipitation forecasts based on the analogue method: improvements and application to a French large river basin}},
+	volume = {169},
+	year = {2016}
+}
+@article{Fujiwara2017,
+	author = {Fujiwara, Masatomo and Wright, Jonathon S. and Manney, Gloria L. and Gray, Lesley J. and Anstey, James and Birner, Thomas and Davis, Sean and Gerber, Edwin P. and {Lynn Harvey}, V. and Hegglin, Michaela I. and Homeyer, Cameron R. and Knox, John A. and Kr{\"{u}}ger, Kirstin and Lambert, Alyn and Long, Craig S. and Martineau, Patrick and Molod, Andrea and Monge-Sanz, Beatriz M. and Santee, Michelle L. and Tegtmeier, Susann and Chabrillat, Simon and Tan, David G.H. and Jackson, David R. and Polavarapu, Saroja and Compo, Gilbert P. and Dragani, Rossana and Ebisuzaki, Wesley and Harada, Yayoi and Kobayashi, Chiaki and McCarty, Will and Onogi, Kazutoshi and Pawson, Steven and Simmons, Adrian and Wargan, Krzysztof and Whitaker, Jeffrey S. and Zou, Cheng Zhi},
+	doi = {10.5194/acp-17-1417-2017},
+	issn = {16807324},
+	journal = {Atmos. Chem. Phys.},
+	number = {2},
+	pages = {1417--1452},
+	title = {{Introduction to the SPARC Reanalysis Intercomparison Project (S-RIP) and overview of the reanalysis systems}},
+	volume = {17},
+	year = {2017}
+}
+@article{Compo2011,
+	archivePrefix = {arXiv},
+	arxivId = {arXiv:1011.1669v3},
+	author = {Compo, G. P. and Whitaker, J. S. and Sardeshmukh, P. D. and Matsui, N. and Allan, R. J. and Yin, X. and Gleason, B. E. and Vose, R. S. and Rutledge, G. and Bessemoulin, P. and Br{\"{o}}nnimann, S. and Brunet, M. and Crouthamel, R. I. and Grant, a. N. and Groisman, P. Y. and Jones, P. D. and Kruk, M. C. and Kruger, a. C. and Marshall, G. J. and Maugeri, M. and Mok, H. Y. and Nordli, {\O}. and Ross, T. F. and Trigo, R. M. and Wang, X. L. and Woodruff, S. D. and Worley, S. J.},
+	doi = {10.1002/qj.776},
+	eprint = {arXiv:1011.1669v3},
+	isbn = {0035-9009},
+	issn = {00359009},
+	journal = {Quart. J. Roy. Meteor. Soc.},
+	keywords = {Data assimilation,Ensemble Kalman Filter,Sea-level pressure,State estimation,Surface pressure},
+	month = {jan},
+	number = {654},
+	pages = {1--28},
+	pmid = {20167801},
+	title = {{The Twentieth Century Reanalysis Project}},
+	volume = {137},
+	year = {2011}
+}
+@article{Poli2016,
+	author = {Poli, Paul and Hersbach, Hans and Dee, Dick P. and Berrisford, Paul and Simmons, Adrian J. and Vitart, Fr{\'{e}}d{\'{e}}ric and Laloyaux, Patrick and Tan, David G H and Peubey, Carole and Th{\'{e}}paut, Jean No{\"{e}}l and Tr{\'{e}}molet, Yannick and H{\'{o}}lm, El{\'{i}}as V. and Bonavita, Massimo and Isaksen, Lars and Fisher, Michael},
+	doi = {10.1175/JCLI-D-15-0556.1},
+	issn = {08948755},
+	journal = {J. Climate},
+	keywords = {Data assimilation,Interannual variability,Models and modeling,Reanalysis data,Variability},
+	number = {11},
+	pages = {4083--4097},
+	title = {{ERA-20C: An atmospheric reanalysis of the twentieth century}},
+	volume = {29},
+	year = {2016}
+}
+@article{Laloyaux2018a,
+	author = {Laloyaux, Patrick and de Boisseson, Eric and Balmaseda, Magdalena and Bidlot, Jean Raymond and Broennimann, Stefan and Buizza, Roberto and Dalhgren, Per and Dee, Dick and Haimberger, Leopold and Hersbach, Hans and Kosaka, Yuki and Martin, Matthew and Poli, Paul and Rayner, Nick and Rustemeier, Elke and Schepers, Dinand},
+	doi = {10.1029/2018MS001273},
+	issn = {19422466},
+	journal = {J. Adv. Model. Earth Syst.},
+	keywords = {Climate reanalysis,Coupled assimilation,Earth system model},
+	pages = {1172--1195},
+	title = {{CERA-20C: A Coupled Reanalysis of the Twentieth Century}},
+	year = {2018}
+}
+@article{Horton2018b,
+	author = {Horton, Pascal and Br{\"{o}}nnimann, Stefan},
+	doi = {10.1007/s00382-018-4442-6},
+	file = {:D$\backslash$:/{\_}Storage/Mendeley/Horton, Br{\"{o}}nnimann - 2019.pdf:pdf;:D$\backslash$:/{\_}Storage/Mendeley/Horton, Br{\"{o}}nnimann - 2019(2).pdf:pdf},
+	isbn = {0038201844},
+	issn = {0930-7575},
+	journal = {Climate Dynamics},
+	keywords = {Analogue method,Precipitation,Reanalyses,Statistical downscaling,analogue method,precipitation,reanalyses,statistical downscaling},
+	mendeley-groups = {{\_}For{\_}articles/2019{\_}GMD{\_}atmoswing},
+	number = {9-10},
+	pages = {5189--5211},
+	publisher = {Springer Berlin Heidelberg},
+	title = {{Impact of global atmospheric reanalyses on statistical precipitation downscaling}},
+	url = {http://link.springer.com/10.1007/s00382-018-4442-6},
+	volume = {52},
+	year = {2019}
+}
+@article{Fujiwara2017,
+	author = {Fujiwara, Masatomo and Wright, Jonathon S. and Manney, Gloria L. and Gray, Lesley J. and Anstey, James and Birner, Thomas and Davis, Sean and Gerber, Edwin P. and {Lynn Harvey}, V. and Hegglin, Michaela I. and Homeyer, Cameron R. and Knox, John A. and Kr{\"{u}}ger, Kirstin and Lambert, Alyn and Long, Craig S. and Martineau, Patrick and Molod, Andrea and Monge-Sanz, Beatriz M. and Santee, Michelle L. and Tegtmeier, Susann and Chabrillat, Simon and Tan, David G.H. and Jackson, David R. and Polavarapu, Saroja and Compo, Gilbert P. and Dragani, Rossana and Ebisuzaki, Wesley and Harada, Yayoi and Kobayashi, Chiaki and McCarty, Will and Onogi, Kazutoshi and Pawson, Steven and Simmons, Adrian and Wargan, Krzysztof and Whitaker, Jeffrey S. and Zou, Cheng Zhi},
+	doi = {10.5194/acp-17-1417-2017},
+	issn = {16807324},
+	journal = {Atmos. Chem. Phys.},
+	number = {2},
+	pages = {1417--1452},
+	title = {{Introduction to the SPARC Reanalysis Intercomparison Project (S-RIP) and overview of the reanalysis systems}},
+	volume = {17},
+	year = {2017}
+}
+@article{Kalnay1996,
+	archivePrefix = {arXiv},
+	arxivId = {arXiv:1011.1669v3},
+	author = {Kalnay, E and Kanamitsu, M and Kistler, R and Collins, W. and Deaven, D and Gandin, L and Iredell, M and Saha, S and White, G and Woollen, J and Zhu, Y. and Chelliah, M. and Ebisuzaki, W. and Higgins, W. and Janowiak, J. and Mo, K. C. and Ropelewski, C. and Wang, J. and Leetmaa, A. and Reynolds, R. and Jenne, Roy and Joseph, Dennis},
+	doi = {10.1175/1520-0477(1996)077<0437:TNYRP>2.0.CO;2},
+	eprint = {arXiv:1011.1669v3},
+	isbn = {0003-0007},
+	issn = {00030007},
+	journal = {Bull. Amer. Meteor. Soc.},
+	number = {3},
+	pages = {437--471},
+	pmid = {25246403},
+	title = {{The NCEP/NCAR 40-year reanalysis project}},
+	volume = {77},
+	year = {1996}
+}
+@article{Kistler2001,
+	author = {Kistler, Robert and Kalnay, Eugenia and Collins, William and Saha, Suranjana and White, Glenn and Woollen, John and Chelliah, Muthuvel and Ebisuzaki, Wesley and Kanamitsu, Masao and Kousky, Vernon and {Van Den Dool}, Huug and Jenne, Roy and Fiorino, Michael},
+	doi = {10.1175/1520-0477(2001)082<0247:TNNYRM>2.3.CO;2},
+	isbn = {00030007},
+	issn = {00030007},
+	journal = {Bull. Amer. Meteor. Soc.},
+	number = {2},
+	pages = {247--267},
+	pmid = {4102176},
+	title = {{The NCEP-NCAR 50-year reanalysis: Monthly means CD-ROM and documentation}},
+	volume = {82},
+	year = {2001}
+}
+@article{Kanamitsu2002,
+	author = {Kanamitsu, Masao and Ebisuzaki, Wesley and Woollen, Jack and Yang, Shi-Keng and Hnilo, J. J. and Fiorino, M. and Potter, G. L.},
+	doi = {10.1175/BAMS-83-11-1631},
+	issn = {0003-0007},
+	journal = {Bull. Amer. Meteor. Soc.},
+	month = {nov},
+	number = {11},
+	pages = {1631--1643},
+	title = {{NCEP–DOE AMIP-II Reanalysis (R-2)}},
+	volume = {83},
+	year = {2002}
+}
+@article{Saha2010a,
+	author = {Saha, Suranjana and Moorthi, Shrinivas and Pan, Hua Lu and Wu, Xingren and Wang, Jiande and Nadiga, Sudhir and Tripp, Patrick and Kistler, Robert and Woollen, John and Behringer, David and Liu, Haixia and Stokes, Diane and Grumbine, Robert and Gayno, George and Wang, Jun and Hou, Yu Tai and Chuang, Hui Ya and Juang, Hann Ming H and Sela, Joe and Iredell, Mark and Treadon, Russ and Kleist, Daryl and {Van Delst}, Paul and Keyser, Dennis and Derber, John and Ek, Michael and Meng, Jesse and Wei, Helin and Yang, Rongqian and Lord, Stephen and {Van Den Dool}, Huug and Kumar, Arun and Wang, Wanqiu and Long, Craig and Chelliah, Muthuvel and Xue, Yan and Huang, Boyin and Schemm, Jae Kyung and Ebisuzaki, Wesley and Lin, Roger and Xie, Pingping and Chen, Mingyue and Zhou, Shuntai and Higgins, Wayne and Zou, Cheng Zhi and Liu, Quanhua and Chen, Yong and Han, Yong and Cucurull, Lidia and Reynolds, Richard W. and Rutledge, Glenn and Goldberg, Mitch},
+	doi = {10.1175/2010BAMS3001.1},
+	isbn = {0003000715200477},
+	issn = {00030007},
+	journal = {Bulletin of the American Meteorological Society},
+	number = {8},
+	pages = {1015--1057},
+	title = {{The NCEP climate forecast system reanalysis}},
+	volume = {91},
+	year = {2010}
+}
+@article{Kobayashi2015,
+	author = {Kobayashi, Shinya and Ota, Yukinari and Harada, Yayoi and Ebita, Ayataka and Moriya, Masami and Onoda, Hirokatsu and Onogi, Kazutoshi and Kamahori, Hirotaka and Kobayashi, Chiaki and Endo, Hirokazu and Miyaoka, Kengo and Takahashi, Kiyotoshi},
+	doi = {10.2151/jmsj.2015-001},
+	issn = {0026-1165},
+	journal = {J. Meteor. Soc. Japan. Ser. II},
+	keywords = {data assimilation,japan meteo-,meteorological observation,numerical weather prediction,ote-machi,reanalysis,rological agency,shinya kobayashi,tokyo},
+	number = {1},
+	pages = {5--48},
+	title = {{The JRA-55 Reanalysis: General Specifications and Basic Characteristics}},
+	volume = {93},
+	year = {2015}
+}
+@article{Harada2016,
+	author = {Harada, Yayoi and Kamahori, Hirotaka and Kobayashi, Chiaki and Endo, Hirokazu and Kobayashi, Shinya and Ota, Yukinari},
+	doi = {10.2151/jmsj. 2016-015 J-STAGE},
+	issn = {0849-6757},
+	journal = {J. Meteor. Soc. Japan},
+	keywords = {atmospheric circulation,climate variability,reanalysis,verification},
+	number = {3},
+	pages = {269--302},
+	title = {{The JRA-55 Reanalysis: Representation of atmospheric circulation and climate variability}},
+	volume = {94},
+	year = {2016}
+}
+@article{Kobayashi2014,
+	author = {Kobayashi, Chiaki and Endo, Hirokazu and Ota, Yukinari and Kobayashi, Shinya and Onoda, Hirokatsu and Harada, Yayoi and Onogi, Kazutoshi and Kamahori, Hirotaka},
+	doi = {10.2151/sola.2014-016},
+	issn = {1349-6476},
+	journal = {Sola},
+	number = {0},
+	pages = {78--82},
+	title = {{Preliminary Results of the JRA-55C, an Atmospheric Reanalysis Assimilating Conventional Observations Only}},
+	volume = {10},
+	year = {2014}
+}
+@article{Gelaro2017,
+	author = {Gelaro, Ronald and McCarty, Will and Su{\'{a}}rez, Max J. and Todling, Ricardo and Molod, Andrea and Takacs, Lawrence and Randles, Cynthia A. and Darmenov, Anton and Bosilovich, Michael G. and Reichle, Rolf and Wargan, Krzysztof and Coy, Lawrence and Cullather, Richard and Draper, Clara and Akella, Santha and Buchard, Virginie and Conaty, Austin and da Silva, Arlindo M. and Gu, Wei and Kim, Gi Kong and Koster, Randal and Lucchesi, Robert and Merkova, Dagmar and Nielsen, Jon Eric and Partyka, Gary and Pawson, Steven and Putman, William and Rienecker, Michele and Schubert, Siegfried D. and Sienkiewicz, Meta and Zhao, Bin},
+	doi = {10.1175/JCLI-D-16-0758.1},
+	issn = {08948755},
+	journal = {J. Climate},
+	keywords = {Aerosols,Data assimilation,Numerical analysis/modeling,Reanalysis data,Satellite observations},
+	number = {14},
+	pages = {5419--5454},
+	title = {{The modern-era retrospective analysis for research and applications, version 2 (MERRA-2)}},
+	volume = {30},
+	year = {2017}
+}
+@article{Rienecker2011,
+	author = {Rienecker, Michele M. and Suarez, Max J. and Gelaro, Ronald and Todling, Ricardo and Bacmeister, Julio and Liu, Emily and Bosilovich, Michael G. and Schubert, Siegfried D. and Takacs, Lawrence and Kim, Gi Kong and Bloom, Stephen and Chen, Junye and Collins, Douglas and Conaty, Austin and {Da Silva}, Arlindo and Gu, Wei and Joiner, Joanna and Koster, Randal D. and Lucchesi, Robert and Molod, Andrea and Owens, Tommy and Pawson, Steven and Pegion, Philip and Redder, Christopher R. and Reichle, Rolf and Robertson, Franklin R. and Ruddick, Albert G. and Sienkiewicz, Meta and Woollen, Jack},
+	doi = {10.1175/JCLI-D-11-00015.1},
+	isbn = {0894-8755},
+	issn = {08948755},
+	journal = {J. Climate},
+	number = {14},
+	pages = {3624--3648},
+	title = {{MERRA: NASA's modern-era retrospective analysis for research and applications}},
+	volume = {24},
+	year = {2011}
+}
+@article{Rienecker2011,
+	author = {Rienecker, Michele M. and Suarez, Max J. and Gelaro, Ronald and Todling, Ricardo and Bacmeister, Julio and Liu, Emily and Bosilovich, Michael G. and Schubert, Siegfried D. and Takacs, Lawrence and Kim, Gi Kong and Bloom, Stephen and Chen, Junye and Collins, Douglas and Conaty, Austin and {Da Silva}, Arlindo and Gu, Wei and Joiner, Joanna and Koster, Randal D. and Lucchesi, Robert and Molod, Andrea and Owens, Tommy and Pawson, Steven and Pegion, Philip and Redder, Christopher R. and Reichle, Rolf and Robertson, Franklin R. and Ruddick, Albert G. and Sienkiewicz, Meta and Woollen, Jack},
+	doi = {10.1175/JCLI-D-11-00015.1},
+	isbn = {0894-8755},
+	issn = {08948755},
+	journal = {J. Climate},
+	number = {14},
+	pages = {3624--3648},
+	title = {{MERRA: NASA's modern-era retrospective analysis for research and applications}},
+	volume = {24},
+	year = {2011}
+}
+@article{Dee2011a,
+	author = {Dee, D. P. and Uppala, S. M. and Simmons, A. J. and Berrisford, P. and Poli, P. and Kobayashi, S. and Andrae, U. and Balmaseda, M. A. and Balsamo, G. and Bauer, P. and Bechtold, P. and Beljaars, A. C M and van de Berg, L. and Bidlot, J. and Bormann, N. and Delsol, C. and Dragani, R. and Fuentes, M. and Geer, A. J. and Haimberger, L. and Healy, S. B. and Hersbach, H. and H{\'{o}}lm, E. V. and Isaksen, L. and Kallberg, P. and K{\"{o}}hler, M. and Matricardi, M. and Mcnally, A. P. and Monge-Sanz, B. M. and Morcrette, J. J. and Park, B. K. and Peubey, C. and de Rosnay, P. and Tavolato, C. and Th{\'{e}}paut, J. N. and Vitart, F.},
+	doi = {10.1002/qj.828},
+	isbn = {1477-870X},
+	issn = {00359009},
+	journal = {Quart. J. Roy. Meteor. Soc.},
+	number = {656},
+	pages = {553--597},
+	title = {{The ERA-Interim reanalysis: Configuration and performance of the data assimilation system}},
+	volume = {137},
+	year = {2011}
 }
