--- a/references.bib
+++ b/references.bib
@@ -242,3 +242,13 @@
 	volume = {137},
 	year = {2011}
 }
+@article{Hersbach2019,
+    author = {Hersbach, Hans and Bell, Bill and Berrisford, Paul and Hor{\'{a}}nyi, Andr{\'{a}}s and Sabater, Joaqu{\'{i}}n Mu{\~{n}}oz and Nicolas, Julien and Radu, Raluca and Schepers, Dinand and Simmons, Adrian and Soci, Cornel and Dee, Dick},
+    doi = {10.21957/vf291hehd7},
+    journal = {ECMWF Newsletter},
+    mendeley-groups = {Meteorology / Climate/Datasets},
+    number = {159},
+    pages = {17--24},
+    title = {{Global reanalysis: goodbye ERA-Interim, hello ERA5}},
+    year = {2019}
+}
