--- a/main.tex
+++ b/main.tex
@@ -216,53 +216,30 @@ where $\Delta \hat{z}_{i}$ is the geopotential height gradient between the \text
 
 
 
-\section{First Level Heading}
-Please lay out your article using the section headings and example objects below, and remember to delete all help text prior to submitting your article to the journal.
 
 
+%\subsubsection{Third Level Heading}
+%\paragraph{Fourth Level Heading}
+%\subparagraph{Fifth level heading}
 
-\subsection{Second Level Heading}
-If data, scripts or other artefacts used to generate the analyses presented in the article are available via a publicly available data repository, please include a reference to the location of the material within the article.
-
-
-\subsection{Adding Citations and a References List}
-
-Please use a \verb|.bib| file to store your references. When using Overleaf to prepare your manuscript, you can upload a \verb|.bib| file or import your Mendeley, CiteULike or Zotero library directly as a \verb|.bib| file\footnote{see \url{https://www.overleaf.com/blog/184}}. You can then cite entries from it, like this: \cite{lees2010theoretical}. Just remember to specify a bibliography style, as well as the filename of the \verb|.bib|.
-
-You can find a video tutorial here to learn more about BibTeX: \url{https://www.overleaf.com/help/97-how-to-include-a-bibliography-using-bibtex}.
-
-This template provides two options for the citation and reference list style: 
-\begin{description}
-\item[Numerical style] Use \verb|\documentclass[...,num-refs]{wiley-article}|
-\item[Author-year style] Use \verb|\documentclass[...,alpha-refs]{wiley-article}|
-\end{description}
-
-\subsubsection{Third Level Heading}
-Supporting information will be included with the published article. For submission any supporting information should be supplied as separate files but referred to in the text.
-
-Appendices will be published after the references. For submission they should be supplied as separate files but referred to in the text.
-
-\paragraph{Fourth Level Heading}
 % Here are examples of quotes and epigraphs.
-\begin{quote}
-The significant problems we have cannot be solved at the same level of thinking with which we created them.\endnote{Albert Einstein said this.}
-\end{quote}
+%\begin{quote}
+%The significant problems we have cannot be solved at the same level of thinking with which we created them.\endnote{Albert Einstein said this.}
+%\end{quote}
 
-\begin{epigraph}{Albert Einstein}
-Anyone who has never made a mistake has never tried anything new.
-\end{epigraph}
+%\begin{epigraph}{Albert Einstein}
+%Anyone who has never made a mistake has never tried anything new.
+%\end{epigraph}
 
-\subparagraph{Fifth level heading}
-Measurements should be given in SI or SI-derived units.
-Chemical substances should be referred to by the generic name only. Trade names should not be used. Drugs should be referred to by their generic names. If proprietary drugs have been used in the study, refer to these by their generic name, mentioning the proprietary name, and the name and location of the manufacturer, in parentheses.
+
 
 
 
 \section*{acknowledgements}
-Acknowledgements should include contributions from anyone who does not meet the criteria for authorship (for example, to recognize contributions from people who provided technical help, collation of data, writing assistance, acquisition of funding, or a department chairperson who provided general support), as well as any funding or other support information.
+...
 
 \section*{conflict of interest}
-You may be asked to provide a conflict of interest statement during the submission process. Please check the journal's author guidelines for details on what to include in this section. Please ensure you liaise with all co-authors to confirm agreement with the final statement.
+...
 
 %\printendnotes
 
